--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-id-swiper": "^4.0.0",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
+    "swiper": "^8.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
